fix: align total results and pages

--- a/sites/public/src/components/listings/search/ListingsSearch.module.scss
+++ b/sites/public/src/components/listings/search/ListingsSearch.module.scss
@@ -91,7 +91,9 @@
 }
 
 .total-results {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   @media (max-width: $screen-md) {
     padding-block-end: 0;
   }
